test/spec/exports.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/exports.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/exports.wast:6:30: function variable out of range (max 1)
  (module (func) (export "a" 1))
                             ^
assert_invalid error:
  third_party/testsuite/exports.wast:10:40: redefinition of export "a"
  (module (func) (func) (export "a" 0) (export "a" 1))
                                       ^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:14:33: redefinition of export "a"
  (module (func) (export "a" 0) (export "a" 0))
                                ^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/exports.wast:31:25: no memory to export
(assert_invalid (module (export "a" memory)) "no memory")
                        ^^^^^^^^^^^^^^^^^^^
1/1 tests passed.
;;; STDOUT ;;)
